--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,6 +4,11 @@ body {
 }
 
 /*Main content area*/
+.navbar-dark .navbar-nav .nav-link:hover,
+.navbar-dark .navbar-nav .nav-link:focus, 
+.navbar-dark .navbar-nav .nav-link:active {
+  color:#ffffff
+}
 
 .navbar {
 	background: #343a40;
@@ -17,6 +22,20 @@ body {
 .style-image:hover {
 	background: #4285f4;
 	cursor:pointer;
+}
+
+.fore-style-image:hover {
+	background: #4285f4;
+	cursor:pointer;
+}
+
+.back-style-image:hover {
+	background: #28a745;
+	cursor:pointer;
+}
+
+.back-item-onclick{
+	background: #28a745;
 }
 
 .loader {
