Add mask style feature

--- a/templates/maskStyle.html
+++ b/templates/maskStyle.html
@@ -414,7 +414,7 @@
 	function sendData(formdata) {
 		alert('send data');
 		$.ajax({
-			url: "/upload_image",
+			url: "/maskstyle_upload_image",
 			data: formdata,
 			type: "POST",
 			contentType: false,
